<resources>
    <string name="app_name">줍깅</string>
    <string name="login_subtitle">지구를 위한 노력</string>
    <string name="login_title">Jubgging</string>
    <string name="login_email">이메일</string>
    <string name="login_password">비밀번호</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_pwd">비밀번호 찾기</string>
    <string name="login_login_btn">로그인하기</string>
    <string name="login_signup_btn">회원가입하기</string>
    <string name="login_kakao_login">카카오 간편 로그인</string>
    <string name="login_naver_login">네이버 간편 로그인</string>
    <string name="signup_pwd_chk">비밀번호 확인</string>
    <string name="signup_first_fin_btn">다음 단계로 이동하기</string>
    <string name="signup_finish_btn">회원가입 완료</string>
    <string name="signup_second_phonenum_tx">전화번호</string>
    <string name="signup_second_authenfication_tx">인증번호</string>
    <string name="signup_third_fin_btn">완료</string>
    <string name="signup_user_name">이름</string>
    <string name="signup_user_nickname">닉네임</string>
    <string name="signup_user_phone_num">전화번호</string>
    <string name="signup_user_age">나이</string>
    <string name="signup_user_gender">성별</string>
    <string name="easy_signup_fin_btn">다음 단계로 이동하기 (1/2)</string>
    <string name="plogging_navigation_tx">플로깅</string>
    <string name="plogging_time_tx">시간</string>
    <string name="plogging_distance_tx">거리</string>
    <string name="plogging_pace_tx">페이스</string>
    <string name="plogging_start_tx">플로깅 시작</string>
    <string name="plogging_stop_tx">종료</string>
    <string name="plogging_pause_tx">플로깅 일시정지</string>
    <string name="plogging_store_tx">저장</string>
    <string name="my_title">마이</string>
    <string name="home_title">홈</string>
    <string name="community_title">커뮤니티</string>
    <string name="today_plogging_tx">오늘의 플로깅</string>
    <string name="my_plogging_list_tx">플로깅 일지</string>
    <string name="my_plogging_notice_tx">공지사항</string>
    <string name="my_plogging_community_tx">함께 줍깅</string>
    <string name="my_plogging_evnet_tx">이벤트</string>
    <string name="my_plogging_logout_tx">로그아웃</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="community_group_ing"><![CDATA[ 모집중인 커뮤니티]]></string>
    <string name="community_group_all"><![CDATA[ 모두보기]]></string>
    <string name="chm_set_radius_tx">반경 설정</string>
    <string name="chm_set_radius_500m">500m</string>
    <string name="chm_set_radius_1km">1km</string>
    <string name="chm_set_radius_2km">2km</string>
    <string name="chm_set_radius_3km">3km</string>
    <string name="cgc_name_tx">커뮤니티 이름</string>
    <string name="cgc_desc_tx">커뮤니티 한 줄 소개</string>
    <string name="cgc_notice_tx">활동 조건 및 안내사항</string>
    <string name="cgc_time_tx">집결 시간 (날짜, 시작 시간, 종료 시간)</string>
    <string name="cgc_place_tx">집결 장소</string>
    <string name="cgc_people_tx">모집 인원</string>
    <string name="cgc_people_tt_tx">명</string>
    <string name="cgc_etc_tx">기타</string>
    <string name="cgc_etc_nt_tx">* 운영자 정보에는 그룹 개설자의 정보가 표시됩니다.</string>
    <string name="cgc_create_btn">생성하기</string>
    <string name="cgd_desc_tx">커뮤니티 한 줄 소개</string>
    <string name="cgd_notice_tx">활동 조건 및 안내사항</string>
    <string name="cgd_time_tx">집결 시간 (날짜, 시작 시간, 종료 시간)</string>
    <string name="cgd_place_tx">집결 장소</string>
    <string name="cgd_people_tx">모집 인원 (명)</string>
    <string name="cgd_people_joined_tx">참여 인원 (명)</string>
    <string name="cgd_creator_tx">운영자 정보</string>
    <string name="cgd_etc_tx">기타</string>
    <string name="cgd_join_btn">참여하기</string>
    <string name="cgj_user_info_tx">신청자 정보</string>
    <string name="cgj_pnum_notice_tx">* 참여 신청 후, 노쇼 방지 및 원활한 활동을 위해 커뮤니티 운영자에게 이메일이 제공됩니다.</string>
    <string name="cgj_community_notice_tx">커뮤니티 활동 조건 및 안내사항</string>
    <string name="cgj_time_tx">집결 시간(날짜, 시작 시간, 종료 시간)</string>
    <string name="cgj_place_tx">집결 장소</string>
    <string name="cgj_group_owner_tx">운영자 정보</string>
    <string name="cgj_group_read_tx">필독</string>
    <string name="cgj_join_btn">참여하기</string>
    <string name="login_slash">/</string>
    <string name="notice_oss_btn">오픈소스 라이선스</string>
    <string name="notice_oss_etc_btn">외부 오픈소스 라이선스</string>
    <string name="chm_tb_title">플로깅</string>
    <string name="plogging_time_context_00_00">00:00</string>
    <string name="plogging_distance_context_0km">0km</string>
    <string name="plogging_pace_context_00_00">00`00</string>
    <string name="plogging_detail_title">날짜</string>
    <string name="plogging_back_btn">뒤로가기</string>
    <string name="plogging_home_btn">홈으로</string>
    <string name="history_date">2022년 11월 28일</string>
    <string name="history_time_00_00">00:00</string>
    <string name="history_distance_0_0km">0.0km</string>
    <string name="history_pace_00_00">00`00</string>
    <string name="email_overlap_chk_btn">중복</string>
    <string name="signup_email_auth_btn">확인</string>
    <string name="signup_overlap_chk_btn">중복</string>
    <string name="signup_pwd_tx">비밀번호</string>
    <string name="user_info_profile_update_btn">프로필 사진 변경하기</string>
    <string name="user_info_email_tt_tx">이메일</string>
    <string name="user_info_nickname_tt_tx">닉네임</string>
    <string name="user_info_nickname_btn">수정</string>
    <string name="user_info_pwd_tt_tx">비밀번호</string>
    <string name="user_info_pwd_tx">기존 비밀번호 입력 후 변경이 가능합니다.</string>
    <string name="user_info_pwd_btn">수정</string>
    <string name="ball_tx_name">장소명</string>
    <string name="ball_tx_address">주소</string>
    <string name="ball_tx_fix_time">영업 시간 :</string>
    <string name="ball_tx_time">시간</string>
    <string name="dcgj_success_tx">신청이 성공적으로 완료되었습니다.</string>
    <string name="dcgj_notice_tx">참여 신청 후, 운영자에게 이메일이 공개되며 \n노쇼 방지와 원활한 소통을 위해 사용됩니다.</string>
    <string name="dcgj_notice_detail_tx">* 커뮤니티 참여 신청이 완료되면 My페이지의 함께 줍깅 목록에서 확인할 수 있습니다.</string>
    <string name="dcgj_move_btn">함께 줍깅에서 확인하기</string>
    <string name="ds_nickname_tx">닉네임</string>
    <string name="ds_nickname_tt_tx">님</string>
    <string name="ds_welcome_tx">회원가입을 환영합니다.</string>
    <string name="ds_welcome_tx2">줍깅과 함께 플로깅하러 GoGo~!</string>
    <string name="ds_move_login_btn">로그인 하러가기</string>
    <string name="community_group_tx">모두와 함께 지구를 지키자!</string>
    <string name="community_group_more_tx">더 보기</string>
    <string name="community_event_tx">플로깅 행사 모음 Zip</string>
    <string name="community_event_more_tx">더 보기</string>
    <string name="home_user_name_tt_tx">님</string>
    <string name="home_user_distance_tt_tx">활동 거리</string>
    <string name="home_user_distance">200</string>
    <string name="home_user_distance_unit_km">/km</string>
    <string name="home_user_time_tt_tx">활동 시간</string>
    <string name="home_user_time">120</string>
    <string name="home_user_time_unit_min">/min</string>
    <string name="home_user_do_history_btn">자세히 보기</string>
    <string name="home_rm_route_tx">추천 코스따라 \n플로깅 하러가기</string>
    <string name="home_ch_map_tx">내 주변\n클린하우스\n보러가기</string>
    <string name="home_plogging_tx">플로깅\n하러가기</string>
    <string name="my_user_name_tt_tx">님</string>
    <string name="my_user_distance_tt_tx">활동 거리</string>
    <string name="my_user_distance">200</string>
    <string name="my_user_distance_unit_km">/km</string>
    <string name="my_user_time_tt_tx">활동 시간</string>
    <string name="my_user_time">120</string>
    <string name="my_user_time_unit_min">/min</string>
    <string name="item_cgd_tx">가나다라마바사아자차카타파하</string>
    <string name="item_event_tx">벚꽃엔딩 들으며 벚꽃 플로깅</string>
    <string name="item_group_date">2022.10.01</string>
    <string name="item_group_place">사계 해변</string>
    <string name="item_group_name">다함께 봉그깅</string>
    <string name="item_group_owner_name">디프다 제주</string>
    <string name="item_group_people">20</string>
    <string name="item_group_people_slash">/</string>
    <string name="item_group_people_tt">30</string>
    <string name="item_group_join_btn">참여하기</string>
</resources>