<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_finish_signup_drawable">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ds_notice_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ds_move_login_btn"
        app:layout_constraintStart_toStartOf="@+id/ds_move_login_btn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ds_nickname_cl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@+id/ds_welcome_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:id="@+id/ds_nickname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ds_nickname_tx"
                android:fontFamily="@font/nanumgothic_bold"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ds_nickname_tt_tv"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ds_nickname_tt_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ds_nickname_tt_tx"
                android:textSize="13dp"
                android:fontFamily="@font/nanumgothic_regular"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/ds_nickname_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ds_nickname_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/ds_welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ds_welcome_tx"
            android:fontFamily="@font/nanumgothic_regular"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/ds_welcome_tv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ds_nickname_cl" />

        <TextView
            android:id="@+id/ds_welcome_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/nanumgothic_regular"
            android:textColor="@color/black"
            android:text="@string/ds_welcome_tx2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ds_welcome_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ds_move_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:paddingVertical="12.5dp"
        android:paddingHorizontal="91dp"
        android:minHeight="1dp"
        android:minWidth="1dp"
        android:fontFamily="@font/nanumgothic_bold"
        android:background="@drawable/dialog_signup_finish_btn_drawable"
        android:text="@string/ds_move_login_btn"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ds_notice_cl" />
</androidx.constraintlayout.widget.ConstraintLayout>